Fixes display if no thumbnail, adjusts container alignment

--- a/css/block/ucb-article-list-block.css
+++ b/css/block/ucb-article-list-block.css
@@ -17,6 +17,8 @@
   margin-bottom: 20px;
   border-bottom: solid 1px rgba(128, 128, 128, 0.333);
   padding-bottom: 20px;
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
 }
 
 .ucb-article-card-title-only {
